2014-09-19  Dmitry Gutov  <dgutov@yandex.ru>

	* emacs-lisp/lisp.el (lisp-completion-at-point): Only calculate
	`table-etc' when `end' is non-nil.
	(lisp-completion-at-point): Move `end' back if it's after quote.
	If in comment or string, only complete when after backquote.
	(Bug#18265)
	(lisp-completion-at-point): Don't use
	`lisp--local-variables-completion-table' in the
	`lisp--form-quoted-p' case.

2014-09-19  Dmitry Gutov  <dgutov@yandex.ru>

	* emacs-lisp/lisp.el (lisp--expect-function-p)
	(lisp--form-quoted-p): New functions.
	(lisp-completion-at-point): Use them to see if we're completing a
	variable reference, a function name, or just any symbol.
	http://lists.gnu.org/archive/html/emacs-devel/2014-02/msg00229.html

2014-09-18  Ivan Kanis  <ivan@kanis.fr>

	* net/shr.el, net/eww.el: Don't override `shr-width', but
	introduce a new variable `shr-internal-width'.  This allows users
	to specify a width themselves.

2014-09-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image-mode.el (image-toggle-display-image): If we have a
	`fit-width' or a `fit-height', don't limit the size of the image
	to the window size, because that doesn't preserve the aspect
	ratio.
	* image-mode.el: Move defvars earlier to avoid a byte-compilation
	warning.

2014-09-17  Reuben Thomas  <rrt@sc3d.org>

	* progmodes/js.el: Add interpreter-mode-alist support for various
	JavaScript interpreters.

2014-09-17  Paul Eggert  <eggert@cs.ucla.edu>

	Don't assume 'grep' supports GREP_OPTIONS.
	The GREP_OPTIONS environment variable is planned to be marked
	obsolescent in GNU grep, due to problems in its use, so stop
	relying on it.
	* progmodes/grep.el (grep-highlight-matches): Document this.
	(grep-process-setup): Do not set GREP_OPTIONS.
	(grep-compute-defaults): Use an explicit --color option if supported.

2014-09-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* msb.el (msb--make-keymap-menu, msb-menu-bar-update-buffers):
	Don't add outdated key-shortcut cache (bug#18482).
